# chair-delivery

./: .gitignore  README.md  pyproject.toml  task_en.txt
chair_delivery/: __init__.py  __main__.py  cli.py  constants.py  counter.py  parser.py
tests/: test_counter.py  test_integration.py  test_parser.py
